Add class list to all unordered lists

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           ><span class="logo-highlight">Web</span>Studio</a
         >
 
-        <ul class="site-nav">
+        <ul class="list" class="site-nav">
           <li><a href="index.html" class="anchor">Студия</a></li>
           <li><a href="portfolio.html" class="anchor">Портфолио</a></li>
           <li><a href="" class="anchor">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="auth-nav">
+      <ul class="list" class="auth-nav">
         <li>
           <a href="tel:+380961111111" class="anchor">+38 096 111 11 11</a>
         </li>
@@ -53,7 +53,7 @@
       <!-- Our benefits section -->
       <section>
         <h2 class="secondary-header">Наши преимущества</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3 class="caption">Внимание к деталям</h3>
             <p>
@@ -88,7 +88,7 @@
       <!-- What we do section -->
       <section>
         <h2 class="secondary-header">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
@@ -116,7 +116,7 @@
       <!-- Our team section -->
       <section>
         <h2 class="secondary-header">Наша команда</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/igor-demianenko-photo.jpg"
@@ -162,7 +162,7 @@
         <span class="logo-highlight">Web</span>Studio
       </p>
       <address class="contacts">
-        <ul>
+        <ul class="list">
           <li>г. Киев, пр-т Леси Украинки, 26</li>
           <li>
             <a href="tel:+380961111111" class="footer-anchor"
