--- a/portfolio.html
+++ b/portfolio.html
@@ -23,13 +23,13 @@
           ><span class="logo-highlight">Web</span>Studio</a
         >
 
-        <ul class="site-nav">
+        <ul class="list" class="site-nav">
           <li><a href="index.html" class="anchor">Студия</a></li>
           <li><a href="portfolio.html" class="anchor">Портфолио</a></li>
           <li><a href="" class="anchor">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="auth-nav">
+      <ul class="list" class="auth-nav">
         <li>
           <a href="tel:+380961111111" class="anchor">+38 096 111 11 11</a>
         </li>
@@ -45,7 +45,7 @@
       <!--Portfolio section-->
       <h1>Our Projects Portfolio</h1>
       <!--Filters section-->
-      <ul class="filters-list">
+      <ul class="list" class="filters-list">
         <li>
           <button type="button" class="filter-button">Все</button>
         </li>
@@ -63,7 +63,7 @@
         </li>
       </ul>
       <!--Project samples section-->
-      <ul class="project-thumbnails">
+      <ul class="list" class="project-thumbnails">
         <li>
           <a href="" class="project-thumbnails-link">
             <img
@@ -198,7 +198,7 @@
         <span class="logo-highlight">Web</span>Studio
       </p>
       <address class="contacts">
-        <ul>
+        <ul class="list">
           <li>г. Киев, пр-т Леси Украинки, 26</li>
           <li>
             <a href="tel:+380961111111" class="footer-anchor"
