--- a/index.html
+++ b/index.html
@@ -18,142 +18,152 @@
   </head>
   <body>
     <header class="page-header">
-      <nav>
-        <a href="/" class="logo"
-          ><span class="logo-highlight">Web</span>Studio</a
-        >
-
-        <ul class="list" class="site-nav">
-          <li><a href="index.html" class="anchor">Студия</a></li>
-          <li><a href="portfolio.html" class="anchor">Портфолио</a></li>
-          <li><a href="" class="anchor">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="list" class="auth-nav">
-        <li>
-          <a href="tel:+380961111111" class="anchor">+38 096 111 11 11</a>
-        </li>
-        <li>
-          <a href="mailto:info@devstudio.com" class="anchor"
-            >info@devstudio.com</a
+      <div class="container">
+        <nav>
+          <a href="/" class="logo"
+            ><span class="logo-highlight">Web</span>Studio</a
           >
-        </li>
-      </ul>
+
+          <ul class="list" class="site-nav">
+            <li><a href="index.html" class="anchor">Студия</a></li>
+            <li><a href="portfolio.html" class="anchor">Портфолио</a></li>
+            <li><a href="" class="anchor">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="list" class="auth-nav">
+          <li>
+            <a href="tel:+380961111111" class="anchor">+38 096 111 11 11</a>
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="anchor"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main>
       <!-- Hero section -->
-      <section>
-        <h1 class="main-header">
-          Эффективные решения <br />для вашего бизнеса
-        </h1>
-        <button type="button" class="button">Заказать услугу</button>
+      <section class="section" class="hero">
+        <div class="container">
+          <h1 class="main-header">
+            Эффективные решения <br />для вашего бизнеса
+          </h1>
+          <button type="button" class="button">Заказать услугу</button>
+        </div>
       </section>
 
       <!-- Our benefits section -->
-      <section>
-        <h2 class="secondary-header">Наши преимущества</h2>
-        <ul class="list">
-          <li>
-            <h3 class="caption">Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="caption">Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="caption">Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="caption">Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="section" class="our-benefits">
+        <div class="container">
+          <h2 class="secondary-header">Наши преимущества</h2>
+          <ul class="list">
+            <li>
+              <h3 class="caption">Внимание к деталям</h3>
+              <p>
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h3 class="caption">Пунктуальность</h3>
+              <p>
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h3 class="caption">Планирование</h3>
+              <p>
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h3 class="caption">Современные технологии</h3>
+              <p>
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- What we do section -->
-      <section>
-        <h2 class="secondary-header">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
-              alt="Программирование"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
-              alt="UI дизайн"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
-              alt="Веб-дизайн"
-              width="370"
-            />
-          </li>
-        </ul>
+      <section class="section" class="our-expertise">
+        <div class="container">
+          <h2 class="secondary-header">Чем мы занимаемся</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
+                alt="Программирование"
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
+                alt="UI дизайн"
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
+                alt="Веб-дизайн"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Our team section -->
-      <section>
-        <h2 class="secondary-header">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/igor-demianenko-photo.jpg"
-              alt="Дизайнер продукта"
-              width="270"
-            />
-            <h3 class="caption caption-name">Игорь Демьяненко</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/olga-repina-photo.jpg"
-              alt="Разработчик"
-              width="270"
-            />
-            <h3 class="caption caption-name">Ольга Репина</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/nikolai-tarasov-photo.jpg"
-              alt="Специалист по маркетингу"
-              width="270"
-            />
-            <h3 class="caption caption-name">Николай Тарасов</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/mikhail-ermakov-photo.jpg"
-              alt="UI дизайнер"
-              width="270"
-            />
-            <h3 class="caption caption-name">Михаил Ермаков</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
+      <section class="section" class="our-team">
+        <div class="container">
+          <h2 class="secondary-header">Наша команда</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/igor-demianenko-photo.jpg"
+                alt="Дизайнер продукта"
+                width="270"
+              />
+              <h3 class="caption caption-name">Игорь Демьяненко</h3>
+              <p>Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="./images/olga-repina-photo.jpg"
+                alt="Разработчик"
+                width="270"
+              />
+              <h3 class="caption caption-name">Ольга Репина</h3>
+              <p>Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./images/nikolai-tarasov-photo.jpg"
+                alt="Специалист по маркетингу"
+                width="270"
+              />
+              <h3 class="caption caption-name">Николай Тарасов</h3>
+              <p>Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/mikhail-ermakov-photo.jpg"
+                alt="UI дизайнер"
+                width="270"
+              />
+              <h3 class="caption caption-name">Михаил Ермаков</h3>
+              <p>UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
