--- a/portfolio.html
+++ b/portfolio.html
@@ -43,154 +43,162 @@
 
     <main>
       <!--Portfolio section-->
-      <h1>Our Projects Portfolio</h1>
-      <!--Filters section-->
-      <ul class="list" class="filters-list">
-        <li>
-          <button type="button" class="filter-button">Все</button>
-        </li>
-        <li>
-          <button type="button" class="filter-button">Веб-сайты</button>
-        </li>
-        <li>
-          <button type="button" class="filter-button">Приложения</button>
-        </li>
-        <li>
-          <button type="button" class="filter-button">Дизайн</button>
-        </li>
-        <li>
-          <button type="button" class="filter-button">Маркетинг</button>
-        </li>
-      </ul>
+      <section class="section" class="filters">
+        <div class="container">
+          <h1>Our Projects Portfolio</h1>
+          <!--Filters section-->
+          <ul class="list" class="filters-list">
+            <li>
+              <button type="button" class="filter-button">Все</button>
+            </li>
+            <li>
+              <button type="button" class="filter-button">Веб-сайты</button>
+            </li>
+            <li>
+              <button type="button" class="filter-button">Приложения</button>
+            </li>
+            <li>
+              <button type="button" class="filter-button">Дизайн</button>
+            </li>
+            <li>
+              <button type="button" class="filter-button">Маркетинг</button>
+            </li>
+          </ul>
+        </div>
+      </section>
       <!--Project samples section-->
-      <ul class="list" class="project-thumbnails">
-        <li>
-          <a href="" class="project-thumbnails-link">
-            <img
-              src="./images/technokryak.jpg"
-              alt="Сайт Технокряк"
-              width="370"
-            />
-            <h2 class="caption project-name">Технокряк</h2>
-            <p>Веб-сайт</p>
-            <p>
-              Технокряк это современная площадка распространения коронавируса.
-              Компании используют эту платформу для цифрового шпионажа и атак на
-              защищённые сервера конкурентов.
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="project-thumbnails-link">
-            <img
-              src="./images/poster.jpg"
-              alt="Постер баскетбольного матча"
-              width="370"
-            />
-            <h2 class="caption project-name">
-              Постер New Orlean vs Golden Star
-            </h2>
-            <p>Дизайн</p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="project-thumbnails-link">
-            <img
-              src="./images/seafood.jpg"
-              alt="Ресторан Seafood"
-              width="370"
-            />
-            <h2 class="caption project-name">Ресторан Seafood</h2>
-            <p>Приложение</p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="project-thumbnails-link">
-            <img src="./images/prime.jpg" alt="Проект Prime" width="370" />
-            <h2 class="caption project-name">Проект Prime</h2>
-            <p>Маркетинг</p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="project-thumbnails-link">
-            <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" />
-            <h2 class="caption project-name">Проект Boxes</h2>
-            <p>Приложение</p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="project-thumbnails-link">
-            <img
-              src="./images/inspiration.jpg"
-              alt="Веб-сайт Inspiration"
-              width="370"
-            />
-            <h2 class="caption project-name">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="project-thumbnails-link">
-            <img
-              src="./images/ltd-edition.jpg"
-              alt="Издание Limited Edition"
-              width="370"
-            />
-            <h2 class="caption project-name">Издание Limited Edition</h2>
-            <p>Дизайн</p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="project-thumbnails-link">
-            <img src="./images/lab.jpg" alt="Проект LAB" width="370" />
-            <h2 class="caption project-name">Проект LAB</h2>
-            <p>Маркетинг</p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="" class="project-thumbnails-link">
-            <img
-              src="./images/growing-business.jpg"
-              alt="Приложение Growing Business"
-              width="370"
-            />
-            <h2 class="caption project-name">Growing Business</h2>
-            <p>Приложение</p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-          </a>
-        </li>
-      </ul>
+      <section class="section" class="project-samples">
+        <div class="container">
+          <ul class="list" class="project-thumbnails">
+            <li>
+              <a href="" class="project-thumbnails-link">
+                <img
+                  src="./images/technokryak.jpg"
+                  alt="Сайт Технокряк"
+                  width="370"
+                />
+                <h2 class="caption project-name">Технокряк</h2>
+                <p>Веб-сайт</p>
+                <p>
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="project-thumbnails-link">
+                <img
+                  src="./images/poster.jpg"
+                  alt="Постер баскетбольного матча"
+                  width="370"
+                />
+                <h2 class="caption project-name">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p>Дизайн</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="project-thumbnails-link">
+                <img
+                  src="./images/seafood.jpg"
+                  alt="Ресторан Seafood"
+                  width="370"
+                />
+                <h2 class="caption project-name">Ресторан Seafood</h2>
+                <p>Приложение</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="project-thumbnails-link">
+                <img src="./images/prime.jpg" alt="Проект Prime" width="370" />
+                <h2 class="caption project-name">Проект Prime</h2>
+                <p>Маркетинг</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="project-thumbnails-link">
+                <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" />
+                <h2 class="caption project-name">Проект Boxes</h2>
+                <p>Приложение</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="project-thumbnails-link">
+                <img
+                  src="./images/inspiration.jpg"
+                  alt="Веб-сайт Inspiration"
+                  width="370"
+                />
+                <h2 class="caption project-name">Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="project-thumbnails-link">
+                <img
+                  src="./images/ltd-edition.jpg"
+                  alt="Издание Limited Edition"
+                  width="370"
+                />
+                <h2 class="caption project-name">Издание Limited Edition</h2>
+                <p>Дизайн</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="project-thumbnails-link">
+                <img src="./images/lab.jpg" alt="Проект LAB" width="370" />
+                <h2 class="caption project-name">Проект LAB</h2>
+                <p>Маркетинг</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </a>
+            </li>
+            <li>
+              <a href="" class="project-thumbnails-link">
+                <img
+                  src="./images/growing-business.jpg"
+                  alt="Приложение Growing Business"
+                  width="370"
+                />
+                <h2 class="caption project-name">Growing Business</h2>
+                <p>Приложение</p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
