--- a/index.html
+++ b/index.html
@@ -18,23 +18,27 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="container">
-        <nav>
+      <div class="container header">
+        <nav class="navigation">
           <a href="/" class="logo"
             ><span class="logo-highlight">Web</span>Studio</a
           >
 
-          <ul class="list" class="site-nav">
-            <li><a href="index.html" class="anchor">Студия</a></li>
-            <li><a href="portfolio.html" class="anchor">Портфолио</a></li>
-            <li><a href="" class="anchor">Контакты</a></li>
+          <ul class="list site-nav">
+            <li class="menu-item">
+              <a href="index.html" class="anchor">Студия</a>
+            </li>
+            <li class="menu-item">
+              <a href="portfolio.html" class="anchor">Портфолио</a>
+            </li>
+            <li class="menu-item"><a href="" class="anchor">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="list" class="auth-nav">
-          <li>
+        <ul class="list auth-nav">
+          <li class="menu-item">
             <a href="tel:+380961111111" class="anchor">+38 096 111 11 11</a>
           </li>
-          <li>
+          <li class="menu-item">
             <a href="mailto:info@devstudio.com" class="anchor"
               >info@devstudio.com</a
             >
@@ -45,19 +49,19 @@
 
     <main>
       <!-- Hero section -->
-      <section class="section" class="hero">
-        <div class="container">
-          <h1 class="main-header">
-            Эффективные решения <br />для вашего бизнеса
-          </h1>
-          <button type="button" class="button">Заказать услугу</button>
+      <section class="section hero">
+        <div class="full-width">
+          <h1 class="main-header">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="modal-btn button">
+            Заказать услугу
+          </button>
         </div>
       </section>
 
       <!-- Our benefits section -->
-      <section class="section" class="our-benefits">
+      <section class="section our-benefits">
         <div class="container">
-          <h2 class="secondary-header">Наши преимущества</h2>
+          <h2 class="secondary-header visually-hidden">Наши преимущества</h2>
           <ul class="list">
             <li>
               <h3 class="caption">Внимание к деталям</h3>
@@ -92,25 +96,25 @@
       </section>
 
       <!-- What we do section -->
-      <section class="section" class="our-expertise">
+      <section class="section our-expertise">
         <div class="container">
           <h2 class="secondary-header">Чем мы занимаемся</h2>
           <ul class="list">
-            <li>
+            <li class="list-item">
               <img
                 src="./images/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
                 alt="Программирование"
                 width="370"
               />
             </li>
-            <li>
+            <li class="list-item">
               <img
                 src="./images/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
                 alt="UI дизайн"
                 width="370"
               />
             </li>
-            <li>
+            <li class="list-item">
               <img
                 src="./images/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
                 alt="Веб-дизайн"
@@ -122,7 +126,7 @@
       </section>
 
       <!-- Our team section -->
-      <section class="section" class="our-team">
+      <section class="section our-team">
         <div class="container">
           <h2 class="secondary-header">Наша команда</h2>
           <ul class="list">
