--- a/portfolio.html
+++ b/portfolio.html
@@ -18,34 +18,40 @@
   </head>
   <body>
     <header class="page-header">
-      <nav>
-        <a href="/" class="logo"
-          ><span class="logo-highlight">Web</span>Studio</a
-        >
-
-        <ul class="list" class="site-nav">
-          <li><a href="index.html" class="anchor">Студия</a></li>
-          <li><a href="portfolio.html" class="anchor">Портфолио</a></li>
-          <li><a href="" class="anchor">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="list" class="auth-nav">
-        <li>
-          <a href="tel:+380961111111" class="anchor">+38 096 111 11 11</a>
-        </li>
-        <li>
-          <a href="mailto:info@devstudio.com" class="anchor"
-            >info@devstudio.com</a
+      <div class="container header">
+        <nav class="navigation">
+          <a href="/" class="logo"
+            ><span class="logo-highlight">Web</span>Studio</a
           >
-        </li>
-      </ul>
+
+          <ul class="list site-nav">
+            <li class="menu-item">
+              <a href="index.html" class="anchor">Студия</a>
+            </li>
+            <li class="menu-item">
+              <a href="portfolio.html" class="anchor">Портфолио</a>
+            </li>
+            <li class="menu-item"><a href="" class="anchor">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="list auth-nav">
+          <li class="menu-item">
+            <a href="tel:+380961111111" class="anchor">+38 096 111 11 11</a>
+          </li>
+          <li class="menu-item">
+            <a href="mailto:info@devstudio.com" class="anchor"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main>
       <!--Portfolio section-->
       <section class="section" class="filters">
         <div class="container">
-          <h1>Our Projects Portfolio</h1>
+          <h1 class="visually-hidden">Our Projects Portfolio</h1>
           <!--Filters section-->
           <ul class="list" class="filters-list">
             <li>
@@ -67,133 +73,161 @@
         </div>
       </section>
       <!--Project samples section-->
-      <section class="section" class="project-samples">
+      <section class="section project-samples">
         <div class="container">
-          <ul class="list" class="project-thumbnails">
-            <li>
+          <ul class="project-thumbnails">
+            <li class="project-item">
               <a href="" class="project-thumbnails-link">
                 <img
                   src="./images/technokryak.jpg"
                   alt="Сайт Технокряк"
                   width="370"
                 />
-                <h2 class="caption project-name">Технокряк</h2>
-                <p>Веб-сайт</p>
-                <p>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                <div>
+                  <h2 class="caption project-name">Технокряк</h2>
+                  <p>Веб-сайт</p>
+                  <p class="visually-hidden">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="project-item">
               <a href="" class="project-thumbnails-link">
                 <img
                   src="./images/poster.jpg"
                   alt="Постер баскетбольного матча"
                   width="370"
                 />
-                <h2 class="caption project-name">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p>Дизайн</p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
+                <div>
+                  <h2 class="caption project-name">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p>Дизайн</p>
+                  <p class="visually-hidden">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="project-item">
               <a href="" class="project-thumbnails-link">
                 <img
                   src="./images/seafood.jpg"
                   alt="Ресторан Seafood"
                   width="370"
                 />
-                <h2 class="caption project-name">Ресторан Seafood</h2>
-                <p>Приложение</p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
+                <div>
+                  <h2 class="caption project-name">Ресторан Seafood</h2>
+                  <p>Приложение</p>
+                  <p class="visually-hidden">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="project-item">
               <a href="" class="project-thumbnails-link">
                 <img src="./images/prime.jpg" alt="Проект Prime" width="370" />
-                <h2 class="caption project-name">Проект Prime</h2>
-                <p>Маркетинг</p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
+                <div>
+                  <h2 class="caption project-name">Проект Prime</h2>
+                  <p>Маркетинг</p>
+                  <p class="visually-hidden">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="project-item">
               <a href="" class="project-thumbnails-link">
                 <img src="./images/boxes.jpg" alt="Проект Boxes" width="370" />
-                <h2 class="caption project-name">Проект Boxes</h2>
-                <p>Приложение</p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
+                <div>
+                  <h2 class="caption project-name">Проект Boxes</h2>
+                  <p>Приложение</p>
+                  <p class="visually-hidden">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="project-item">
               <a href="" class="project-thumbnails-link">
                 <img
                   src="./images/inspiration.jpg"
                   alt="Веб-сайт Inspiration"
                   width="370"
                 />
-                <h2 class="caption project-name">Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
+                <div>
+                  <h2 class="caption project-name">
+                    Inspiration has no Borders
+                  </h2>
+                  <p>Веб-сайт</p>
+                  <p class="visually-hidden">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="project-item">
               <a href="" class="project-thumbnails-link">
                 <img
                   src="./images/ltd-edition.jpg"
                   alt="Издание Limited Edition"
                   width="370"
                 />
-                <h2 class="caption project-name">Издание Limited Edition</h2>
-                <p>Дизайн</p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
+                <div>
+                  <h2 class="caption project-name">Издание Limited Edition</h2>
+                  <p>Дизайн</p>
+                  <p class="visually-hidden">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="project-item">
               <a href="" class="project-thumbnails-link">
                 <img src="./images/lab.jpg" alt="Проект LAB" width="370" />
-                <h2 class="caption project-name">Проект LAB</h2>
-                <p>Маркетинг</p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
+                <div>
+                  <h2 class="caption project-name">Проект LAB</h2>
+                  <p>Маркетинг</p>
+                  <p class="visually-hidden">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="project-item">
               <a href="" class="project-thumbnails-link">
                 <img
                   src="./images/growing-business.jpg"
                   alt="Приложение Growing Business"
                   width="370"
                 />
-                <h2 class="caption project-name">Growing Business</h2>
-                <p>Приложение</p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
+                <div>
+                  <h2 class="caption project-name">Growing Business</h2>
+                  <p>Приложение</p>
+                  <p class="visually-hidden">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </p>
+                </div>
               </a>
             </li>
           </ul>
