Style footer layout

--- a/portfolio.html
+++ b/portfolio.html
@@ -236,24 +236,26 @@
     </main>
 
     <footer class="footer">
-      <p class="logo logo-footer">
-        <span class="logo-highlight">Web</span>Studio
-      </p>
-      <address class="contacts">
-        <ul class="list">
-          <li>г. Киев, пр-т Леси Украинки, 26</li>
-          <li>
-            <a href="tel:+380961111111" class="footer-anchor"
-              >+38 096 111 11 11</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="footer-anchor"
-              >info@devstudio.com</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <p class="logo logo-footer">
+          <span class="logo-highlight">Web</span>Studio
+        </p>
+        <address class="contacts">
+          <ul class="list">
+            <li class="list-item">г. Киев, пр-т Леси Украинки, 26</li>
+            <li class="list-item">
+              <a href="tel:+380961111111" class="footer-anchor"
+                >+38 096 111 11 11</a
+              >
+            </li>
+            <li class="list-item">
+              <a href="mailto:info@devstudio.com" class="footer-anchor"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
