--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
           <ul class="list site-nav">
             <li class="menu-item">
-              <a href="index.html" class="anchor active">Студия</a>
+              <a href="/" class="anchor active">Студия</a>
             </li>
             <li class="menu-item">
               <a href="portfolio.html" class="anchor">Портфолио</a>
