--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
           >
           <ul class="list site-nav">
             <li class="menu-item">
-              <a href="index.html" class="anchor">Студия</a>
+              <a href="/" class="anchor">Студия</a>
             </li>
             <li class="menu-item">
               <a href="portfolio.html" class="anchor active">Портфолио</a>
