Fix homepage link

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <header class="page-header">
       <div class="container header">
         <nav class="navigation">
-          <a href="/" class="logo"
+          <a href="index.html" class="logo"
             ><span class="logo-highlight">Web</span>Studio</a
           >
 
           <ul class="list site-nav">
             <li class="menu-item">
-              <a href="/" class="anchor active">Студия</a>
+              <a href="index.html" class="anchor active">Студия</a>
             </li>
             <li class="menu-item">
               <a href="portfolio.html" class="anchor">Портфолио</a>
