--- a/portfolio.html
+++ b/portfolio.html
@@ -20,12 +20,12 @@
     <header class="page-header">
       <div class="container header">
         <nav class="navigation">
-          <a href="/" class="logo"
+          <a href="index.html" class="logo"
             ><span class="logo-highlight">Web</span>Studio</a
           >
           <ul class="list site-nav">
             <li class="menu-item">
-              <a href="/" class="anchor">Студия</a>
+              <a href="index.html" class="anchor">Студия</a>
             </li>
             <li class="menu-item">
               <a href="portfolio.html" class="anchor active">Портфолио</a>
